--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajo Integrador</title>
+    <title>Untref School</title>
+    <link rel="stylesheet" href="./css/master.css">
 </head>
+
 <body>
-    
+    <header>
+        <figure id="logo">
+            <img src="./img/Logo.png" alt="Logo" width="100%">
+        </figure>
+        <nav>
+            <a href="#">Quienes somos</a>
+            <a href="#">¿Por qué elegirnos?</a>
+            <a href="#">Propuesta educativa</a>
+            <a href="#">Últimas noticias</a>
+            <a href="./formulario.html" target="_self">Contactanos</a>
+        </nav>
+    </header>
 </body>
+
 </html>
