--- a/index.html
+++ b/index.html
@@ -9,18 +9,111 @@
 </head>
 
 <body>
-    <header>
+    <header id="encabezado">
         <figure id="logo">
-            <img src="./img/Logo.png" alt="Logo" width="100%">
+            <img src="./img/Logo.jpg" alt="logo">
         </figure>
-        <nav>
-            <a href="#">Quienes somos</a>
-            <a href="#">¿Por qué elegirnos?</a>
-            <a href="#">Propuesta educativa</a>
-            <a href="#">Últimas noticias</a>
+        <nav id="opciones">
+            <a href="#quienesSomos">Quienes somos</a>
+            <a href="#elegirnos">¿Por qué elegirnos?</a>
+            <a href="#propuesta">Propuesta educativa</a>
+            <a href="#noticias">Últimas noticias</a>
             <a href="./formulario.html" target="_self">Contactanos</a>
         </nav>
     </header>
+    <main>
+        <div id="banner">
+            <img src="./img/banner.jpg" alt="banner">
+            <h1>Nuestra escuela</h1>
+        </div>
+        <h2>Quienes somos</h2>
+        <section id="quienesSomos">
+            <img src="./img/somos.jpg" alt="somos" width="20%">
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat beatae laboriosam quos adipisci itaque
+                qui.
+                Maiores consequatur modi enim obcaecati explicabo vel qui quaerat! Atque, nesciunt quos, eligendi fugiat
+                recusandae corrupti dicta facere totam eius iure quia adipisci minima porro unde natus, sapiente
+                expedita
+                sint. Quas magni at deleniti in perferendis nulla reiciendis debitis architecto, veniam veritatis saepe
+                fuga
+                rerum adipisci nesciunt dolor fugiat alias repudiandae eum sit molestiae autem.</p>
+        </section>
+        <section id="elegirnos">
+            <h2>¿Por qué elegirnos?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab velit nisi quam, illo quidem aperiam
+                voluptates
+                nostrum deleniti blanditiis minima? Sunt, adipisci laudantium eos, porro distinctio aperiam officiis
+                minus
+                tempore eveniet beatae explicabo ipsam. Quo vero ut qui explicabo fugiat, provident labore debitis
+                architecto ducimus ipsa, voluptate repudiandae expedita, iure molestias iusto odit corrupti cupiditate
+                nihil
+                voluptatum. Illum, debitis neque? </p>
+            <img src="./img/elegirnos.jpg" alt="elegirnos" width="30%">
+        </section>
+        <section id="propuesta">
+            <H2>Nuestra propuesta educativa</H2>
+            <dl>
+                <li>
+                    Lorem
+                </li>
+                <li>
+                    Ipsum
+                </li>
+                <li>
+                    Dolor
+                </li>
+                <li>
+                    Sit amet
+                </li>
+                <li>
+                    Consectetur
+                </li>
+                <li>
+                    Adipisicing elit
+                </li>
+            </dl>
+        </section>
+        <section id="noticias">
+            <h2>Últimas noticias</h2>
+            <div>
+                <h3>
+                    Lorem ipsum
+                </h3>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit suscipit, perferendis aspernatur
+                    atque itaque minima ullam cumque optio voluptatibus dicta soluta earum, adipisci reiciendis
+                    repellat, consequuntur nihil odit nobis architecto.</p>
+            </div>
+            <div>
+                <h3> Lorem ipsum dolor sit </h3>
+                <p> amet consectetur adipisicing elit. Soluta ducimus cum ipsam minima accusantium exercitationem
+                    adipisci enim numquam laudantium sequi! Tempora laboriosam totam perspiciatis iusto
+                    cumqueconsectetur beatae, laudantium facere! Placeat in soluta distinctio ipsa harum! </p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h3>Redes sociales</h3>
+            <a href="https://www.instagram.com" target="_blank"><ion-icon size=large name="logo-instagram"></ion-icon></a>
+            <a href="https://facebook.com" target="_blank"><ion-icon size=large name="logo-facebook"></ion-icon></a>
+            <a href="https://twitter.com" target="_blank"><ion-icon size=large name="logo-twitter"></ion-icon></a>
+        </div>
+        <div>
+            <h3>Instituto </h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.7941220791477!2d-58.56497842362993!3d-34.60936717295227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb82278613f83%3A0x2508a90e940cb17f!2sUntref%20Sede%20Caseros%20III!5e0!3m2!1ses-419!2sar!4v1689777138839!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div>
+            <h3>Contacto</h3>
+            <p>Correo electrónico:</p>
+            <a href="mailto:escuela@untref.com">escuela@untref.com</a>
+            <p>Tel:</p>
+            <a href="tel:444-8695">444-8695</a>
+            <p>Whatsapp:</p>
+            <a href="https://api.whatsapp.com/send/?phone=541128578292">1128578292</a>
+        </div>
+    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
